    means keep old versioned depenencies for Perl, relax them a bit for
    Python, but drop them for old versions of debhelper, gnulib,
    type-handling, cdbs and patchutils).
  * Adjust gnome.mk to extend build-dependencies after including classes
    which initialize them.
  * Use viewsvn (not vswn) in Vcs-Browser stanza in debian/control.

 -- Jonas Smedegaard <dr@jones.dk>  Sun, 26 Apr 2009 14:48:35 +0200

cdbs (0.4.56) unstable; urgency=low

  * Simplify logic in autotools, makefile and debhelper snippets:
    $(if A,A,B) -> $(or A,B).
  * Tighten debhelper.mk build-dependency hint for debhelper.  Closes:
    bug#522613, thanks to Adam D. Barratt and Russ Allbery.
  * Fix python-distutils.mk cleanup clashing with dh_clean (dh_clean
    chokes on dirnames containing trailing "-stamp"):
    + Remove stampdir before clean target
    + Use dirname not ending in "-stamp" (and while at it, use dir below
      debian dir to avoid clashing with upstream files)
    Either of above fixes the issue, and closes: bug#521568, thanks to
    Luca Falavigna.
  * Normalize headers to consistently use 1 line per copyright holder,
    one desription and then 1 empty line.
  * Rewrite debian/copyright to follow recent draft of proposed format:
    + Include all copyright holders (not only most project members)
    + Include all licenses (one file is restricted to GPL v2, other ones
      use different but still GPL2-compatible licenses)
    + Refer to centrally stored GPL-2 (not version-less GPL)
    Thanks for lintian for hinting about some of the above.
  * Adapt testsuite to changed packaging format of python-support 0.90.0
    and newer.

 -- Jonas Smedegaard <dr@jones.dk>  Wed, 08 Apr 2009 22:21:17 +0200

cdbs (0.4.55) unstable; urgency=low

  * Fix python-distutils.mk remove python-module-stamp dir in clean
    target.  Closes: bug#521568, thanks to Tristan Seligmann.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 28 Mar 2009 21:10:01 +0100

cdbs (0.4.54) unstable; urgency=low
