@@ -47,7 +47,9 @@ cp tarballs/distutils-test-0.1.tar.gz $WORKDIR
 
 build_package
 
-dpkg -c $WORKDIR/../python-cdbs-testsuite_0.1_all.deb | grep -q /usr/lib/python.../site-packages/testing/foo.py || return_fail
+dpkg -c $WORKDIR/../python-cdbs-testsuite_0.1_all.deb \
+	| grep -q /usr/lib/python.../site-packages/testing/foo.py \
+	|| return_fail
 
 clean_workdir
 return_pass
